1st page input gap fix

--- a/scss/_design.scss
+++ b/scss/_design.scss
@@ -109,8 +109,8 @@
     font-size: 2.5rem !important;
   }
 }
-#content {
+#content.page2 {
   @media screen and (max-width: 490px) {
-    padding-top: 8rem !important;
+    padding-top: 6rem !important;
   }
 }
